// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getIsolatedPools > returns isolated pools in the correct format 1`] = `
{
  "pools": [
    {
      "assets": [
        {
          "borrowApyPercentage": "8.607579965980627278",
          "borrowBalanceCents": "1012078.12091425992000912830104",
          "borrowBalanceTokens": "10108.94696819534195912",
          "borrowCapTokens": "200000",
          "borrowDistributions": [
            {
              "apyPercentage": "584.755086393075419714",
              "dailyDistributedTokens": "53.5714285714285536",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/packages/tokens/img/hay.png",
                "decimals": 18,
                "symbol": "HAY",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowPercentageRatePerBlock": "7.877402152e-9",
          "borrowerCount": 20,
          "cashTokens": "10014.830956365490406867",
          "collateralFactor": 0.65,
          "exchangeRateVTokens": "0.99904950610348533133",
          "isCollateralOfUser": false,
          "liquidityCents": "1002655.501852117879552160699089",
          "reserveFactor": 0.2,
          "reserveTokens": "4.789396150529737779",
          "supplierCount": 10,
          "supplyApyPercentage": "3.375006086571211753",
          "supplyBalanceCents": "2014254.12247108567172772412234779",
          "supplyBalanceTokens": "20118.98852841030262829937",
          "supplyCapTokens": "500000",
          "supplyDistributions": [
            {
              "apyPercentage": "163.253036189388656833",
              "dailyDistributedTokens": "53.5714285714285536",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/packages/tokens/img/hay.png",
                "decimals": 18,
                "symbol": "HAY",
              },
              "type": "rewardDistributor",
            },
          ],
          "supplyPercentageRatePerBlock": "3.166451056e-9",
          "tokenPriceCents": "100.117067",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "1002550.865534026393274775408283",
          "userSupplyBalanceTokens": "10013.785816698229816049",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
            "decimals": 8,
            "symbol": "vHAY",
            "underlyingToken": {
              "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
              "asset": "/src/packages/tokens/img/hay.png",
              "decimals": 18,
              "symbol": "HAY",
            },
          },
        },
        {
          "borrowApyPercentage": "2.014488268288307401",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "400000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "1.902587519e-9",
          "borrowerCount": 20,
          "cashTokens": "110175",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "11019226.44225",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "11019226.44225",
          "supplyBalanceTokens": "110175",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x10b57706AD2345e590c2eA4DC02faef0d9f5b08B",
      "description": "",
      "isIsolated": true,
      "name": "Stablecoins",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "1002550.865534026393274775408283",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.03685757665446184",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "2.853881278e-9",
          "borrowerCount": 20,
          "cashTokens": "1010000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "101015826.7",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "101015826.7",
          "supplyBalanceTokens": "1010000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x23a73971A6B9f6580c048B9CB188869B2A2aA2aD",
      "description": "",
      "isIsolated": true,
      "name": "DeFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.966657036562684828",
          "borrowBalanceCents": "1000156.7",
          "borrowBalanceTokens": "10000",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "3.710902682e-9",
          "borrowerCount": 20,
          "cashTokens": "101000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "10101582.67",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0.315919325869987271",
          "supplyBalanceCents": "11101739.37",
          "supplyBalanceTokens": "111000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "3.00884001e-10",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x1F4f0989C51f12DAcacD4025018176711f3Bf289",
      "description": "",
      "isIsolated": true,
      "name": "GameFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "9.02630189434992756",
          "borrowBalanceCents": "1208.89376210124671458542653",
          "borrowBalanceTokens": "0.050000004566210045",
          "borrowCapTokens": "56000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "8.24454635e-9",
          "borrowerCount": 20,
          "cashTokens": "0.1",
          "collateralFactor": 0.45,
          "exchangeRateVTokens": "0.99999991050228515",
          "isCollateralOfUser": false,
          "liquidityCents": "2417.7873034",
          "reserveFactor": 0.25,
          "reserveTokens": "1.141552511e-9",
          "supplierCount": 10,
          "supplyApyPercentage": "2.184178158682271344",
          "supplyBalanceCents": "3626.68103790093504174175942566",
          "supplyBalanceTokens": "0.15000000342465753399",
          "supplyCapTokens": "80000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "2.061136728e-9",
          "tokenPriceCents": "24177.873034",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
            "decimals": 8,
            "symbol": "vWBNB",
            "underlyingToken": {
              "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
              "asset": "/src/packages/tokens/img/wbnb.svg",
              "decimals": 18,
              "symbol": "WBNB",
            },
          },
        },
        {
          "borrowApyPercentage": "3.03685757665446184",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "2.853881278e-9",
          "borrowerCount": 20,
          "cashTokens": "1010000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "101015826.7",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "101015826.7",
          "supplyBalanceTokens": "1010000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x596B11acAACF03217287939f88d63b51d3771704",
      "description": "",
      "isIsolated": true,
      "name": "Liquid Staked BNB",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.03685757665446184",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "2.853881278e-9",
          "borrowerCount": 20,
          "cashTokens": "10000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "1000156.7",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 10,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "1000156.7",
          "supplyBalanceTokens": "10000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x11537D023f489E4EF0C7157cc729C7B69CbE0c97",
      "description": "",
      "isIsolated": true,
      "name": "Tron",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
  ],
}
`;

exports[`api/queries/getIsolatedPools > still functions even if the request to fetch the participant counts fails 1`] = `
{
  "pools": [
    {
      "assets": [
        {
          "borrowApyPercentage": "8.607579965980627278",
          "borrowBalanceCents": "1012078.12091425992000912830104",
          "borrowBalanceTokens": "10108.94696819534195912",
          "borrowCapTokens": "200000",
          "borrowDistributions": [
            {
              "apyPercentage": "584.755086393075419714",
              "dailyDistributedTokens": "53.5714285714285536",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/packages/tokens/img/hay.png",
                "decimals": 18,
                "symbol": "HAY",
              },
              "type": "rewardDistributor",
            },
          ],
          "borrowPercentageRatePerBlock": "7.877402152e-9",
          "borrowerCount": 0,
          "cashTokens": "10014.830956365490406867",
          "collateralFactor": 0.65,
          "exchangeRateVTokens": "0.99904950610348533133",
          "isCollateralOfUser": false,
          "liquidityCents": "1002655.501852117879552160699089",
          "reserveFactor": 0.2,
          "reserveTokens": "4.789396150529737779",
          "supplierCount": 0,
          "supplyApyPercentage": "3.375006086571211753",
          "supplyBalanceCents": "2014254.12247108567172772412234779",
          "supplyBalanceTokens": "20118.98852841030262829937",
          "supplyCapTokens": "500000",
          "supplyDistributions": [
            {
              "apyPercentage": "163.253036189388656833",
              "dailyDistributedTokens": "53.5714285714285536",
              "token": {
                "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
                "asset": "/src/packages/tokens/img/hay.png",
                "decimals": 18,
                "symbol": "HAY",
              },
              "type": "rewardDistributor",
            },
          ],
          "supplyPercentageRatePerBlock": "3.166451056e-9",
          "tokenPriceCents": "100.117067",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "1002550.865534026393274775408283",
          "userSupplyBalanceTokens": "10013.785816698229816049",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
            "decimals": 8,
            "symbol": "vHAY",
            "underlyingToken": {
              "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
              "asset": "/src/packages/tokens/img/hay.png",
              "decimals": 18,
              "symbol": "HAY",
            },
          },
        },
        {
          "borrowApyPercentage": "2.014488268288307401",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "400000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "1.902587519e-9",
          "borrowerCount": 0,
          "cashTokens": "110175",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "11019226.44225",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "11019226.44225",
          "supplyBalanceTokens": "110175",
          "supplyCapTokens": "1000000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x10b57706AD2345e590c2eA4DC02faef0d9f5b08B",
      "description": "",
      "isIsolated": true,
      "name": "Stablecoins",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "1002550.865534026393274775408283",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.03685757665446184",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "2.853881278e-9",
          "borrowerCount": 0,
          "cashTokens": "1010000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "101015826.7",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "101015826.7",
          "supplyBalanceTokens": "1010000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x23a73971A6B9f6580c048B9CB188869B2A2aA2aD",
      "description": "",
      "isIsolated": true,
      "name": "DeFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.966657036562684828",
          "borrowBalanceCents": "1000156.7",
          "borrowBalanceTokens": "10000",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "3.710902682e-9",
          "borrowerCount": 0,
          "cashTokens": "101000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "10101582.67",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0.315919325869987271",
          "supplyBalanceCents": "11101739.37",
          "supplyBalanceTokens": "111000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "3.00884001e-10",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x1F4f0989C51f12DAcacD4025018176711f3Bf289",
      "description": "",
      "isIsolated": true,
      "name": "GameFi",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "9.02630189434992756",
          "borrowBalanceCents": "1208.89376210124671458542653",
          "borrowBalanceTokens": "0.050000004566210045",
          "borrowCapTokens": "56000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "8.24454635e-9",
          "borrowerCount": 0,
          "cashTokens": "0.1",
          "collateralFactor": 0.45,
          "exchangeRateVTokens": "0.99999991050228515",
          "isCollateralOfUser": false,
          "liquidityCents": "2417.7873034",
          "reserveFactor": 0.25,
          "reserveTokens": "1.141552511e-9",
          "supplierCount": 0,
          "supplyApyPercentage": "2.184178158682271344",
          "supplyBalanceCents": "3626.68103790093504174175942566",
          "supplyBalanceTokens": "0.15000000342465753399",
          "supplyCapTokens": "80000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "2.061136728e-9",
          "tokenPriceCents": "24177.873034",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
            "decimals": 8,
            "symbol": "vWBNB",
            "underlyingToken": {
              "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
              "asset": "/src/packages/tokens/img/wbnb.svg",
              "decimals": 18,
              "symbol": "WBNB",
            },
          },
        },
        {
          "borrowApyPercentage": "3.03685757665446184",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "2.853881278e-9",
          "borrowerCount": 0,
          "cashTokens": "1010000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "101015826.7",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "101015826.7",
          "supplyBalanceTokens": "1010000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x596B11acAACF03217287939f88d63b51d3771704",
      "description": "",
      "isIsolated": true,
      "name": "Liquid Staked BNB",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
    {
      "assets": [
        {
          "borrowApyPercentage": "3.03685757665446184",
          "borrowBalanceCents": "0",
          "borrowBalanceTokens": "0",
          "borrowCapTokens": "14880000",
          "borrowDistributions": [],
          "borrowPercentageRatePerBlock": "2.853881278e-9",
          "borrowerCount": 0,
          "cashTokens": "10000",
          "collateralFactor": 0.8,
          "exchangeRateVTokens": "1",
          "isCollateralOfUser": false,
          "liquidityCents": "1000156.7",
          "reserveFactor": 0.1,
          "reserveTokens": "0",
          "supplierCount": 0,
          "supplyApyPercentage": "0",
          "supplyBalanceCents": "1000156.7",
          "supplyBalanceTokens": "10000",
          "supplyCapTokens": "18600000",
          "supplyDistributions": [],
          "supplyPercentageRatePerBlock": "0",
          "tokenPriceCents": "100.01567",
          "userBorrowBalanceCents": "0",
          "userBorrowBalanceTokens": "0",
          "userPercentOfLimit": 0,
          "userSupplyBalanceCents": "0",
          "userSupplyBalanceTokens": "0",
          "userWalletBalanceCents": "0",
          "userWalletBalanceTokens": "0",
          "vToken": {
            "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
            "decimals": 8,
            "symbol": "vUSDT",
            "underlyingToken": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/packages/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
          },
        },
      ],
      "comptrollerAddress": "0x11537D023f489E4EF0C7157cc729C7B69CbE0c97",
      "description": "",
      "isIsolated": true,
      "name": "Tron",
      "userBorrowBalanceCents": "0",
      "userBorrowLimitCents": "0",
      "userSupplyBalanceCents": "0",
    },
  ],
}
`;
